%% Diagrama lógico actualizado - versión classDiagram
%% Nota: Mermaid puede seguir expandiendo horizontalmente cuando hay muchas relaciones.
%% Si lo quieres realmente vertical, usa el SVG generado: diagrama_logico_staruml_vertical.svg
%%{init: {'classDiagram': {'direction': 'TB', 'useMaxWidth': false}}}%%
classDiagram
    direction TB

    class Usuario {
        id
        nombre
        correo
        usuario
        contrasena
        rol
        estado
    }

    class Propiedad {
        id
        titulo
        tipo
        zona
        precio
        area
        descripcion
        estado
        imagen
        habitaciones
        banos
        antiguedad
        latitud
        longitud
        agente_id
        categoria_id
        propietario_id
    }

    class Categoria {
        id
        nombre
        descripcion
    }

    class Propietario {
        id
        nombre
        telefono
        email
        direccion
    }

    class RegistroActividad {
        id
        usuario_id
        nombre
        correo
        rol
        accion
        descripcion
        ip
        fecha_hora
    }

    class SolicitudVisita {
        id
        propiedad_id
        cliente_id
        fecha_solicitada
        mensaje
        estado
    }

    class Contrato {
        id
        propiedad_id
        cliente_id
        agente_id
        tipo_contrato
        monto
        fecha_inicio
        fecha_fin
        estado
    }

    class Resena {
        id
        propiedad_id
        cliente_id
        puntuacion
        comentario
        fecha
    }

    class Prospecto {
        id
        agente_id
        nombre
        telefono
        email
        propiedad_id
        etapa
        notas
        fecha_contacto
    }

    class Seguimiento {
        id
        agente_id
        cliente_id
        tipo_contacto
        descripcion
        fecha
    }

    class Notificacion {
        id
        usuario_id
        propiedad_id
        tipo
        mensaje
        leida
        fecha_envio
    }

    class Recomendacion {
        id
        cliente_id
        propiedad_id
        puntuacion_recomendacion
        vista
        fecha_recomendacion
    }

    class Prediccion {
        id
        propiedad_id
        zona
        tipo_propiedad
        probabilidad_venta
        dias_estimados_venta
        tendencia
        fecha_prediccion
    }

    class HistorialCliente {
        id
        cliente_id
        propiedad_id
        accion
        fecha_accion
    }

    Usuario "1" --> "0..*" Propiedad : gestiona
    Usuario "1" --> "0..*" RegistroActividad : genera
    Categoria "1" --> "0..*" Propiedad : clasifica
    Propietario "1" --> "0..*" Propiedad : posee
    Propiedad "1" --> "0..*" SolicitudVisita : recibe
    Usuario "1" --> "0..*" SolicitudVisita : solicita
    Propiedad "1" --> "0..*" Contrato : tiene
    Usuario "1" --> "0..*" Contrato : firma/administra
    Propiedad "1" --> "0..*" Resena : recibe
    Usuario "1" --> "0..*" Resena : escribe
    Usuario "1" --> "0..*" Prospecto : registra
    Propiedad "1" --> "0..*" Prospecto : asociada
    Usuario "1" --> "0..*" Seguimiento : realiza/recibe
    Usuario "1" --> "0..*" Notificacion : recibe
    Propiedad "1" --> "0..*" Notificacion : genera
    Usuario "1" --> "0..*" Recomendacion : recibe
    Propiedad "1" --> "0..*" Recomendacion : recomendada
    Propiedad "1" --> "0..*" Prediccion : tiene
    Usuario "1" --> "0..*" HistorialCliente : genera
    Propiedad "1" --> "0..*" HistorialCliente : registra
